@@ -306,6 +306,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      major changes carried out in the supported modes:
 
        Canon PIXMA iP5000 (EXPERIMENTAL)
+       Canon PIXMA iP4100 (EXPERIMENTAL)
 
 * Changes from 5.2.6
 
